# routes/api.php
@@ -8,5 +8,6 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('/user', function (Request $request) {
         return $request->user();
     });
+    Route::get('holiday/{holiday}/download', [HolidayController::class, 'download']);
     Route::apiResource('holiday', HolidayController::class);
 });
